[package]
name = "rust_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
axum = "0.5.17"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
lazy_static = "1.4.0"
tera = "1.17.1"
markdown = "1.0.0-alpha.3"
